# klimat-pro-AI

./: .gitattributes  .gitignore  README.md  index.html  vite.config.js
apartment-tracker/: .gitignore  README.md  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh
apartment-tracker/apartment_tracker/: __init__.py  bot.py  cli.py  config_loader.py  db.py  exporter.py  models.py  notifier.py  scoring.py  tracker.py
apartment-tracker/apartment_tracker/sources/: __init__.py  avito.py  base.py  cian.py  manual.py  yandex.py
apartment-tracker/config_examples/: .env.example  config.example.yaml
apartment-tracker/scripts/: poll.py
apartment-tracker/tests/: test_scoring.py
deploy/: INFRASTRUCTURE.md  verify-client-payments-rls.sh
deploy/admin-create-user/: deploy-edge-function.sh  verify.sh
deploy/client-role/: apply-migrations.sh  verify-phase1.sh  verify-phase1.sql
deploy/nextcloud/: .env.example  deploy-edge-function.sh  deploy-web.sh  diag.sh  docker-compose.yml  e2e-test.sh  fix-drvfs-perms.sh  setup-appuser.sh  setup.sh
deploy/payment-shares/: apply-migrations.sh  verify-shares-rls.sh
deploy/tasks/: deploy-telegram-fn.sh  verify-rls.sh  verify-task-photos-rls.sh
deploy/visitor/: apply-migrations.sh
deploy/web-push/: cleanup-old-notifications.sql  deploy-edge-function.sh  test-inbox-insert.sh  test-service-post.sh  verify-notifications-rls.sh  verify-rls.sh
docs/: IDEAS.md  TZ-v3.0.md  design-polish-2026-06-24.md
scripts/: gen-vapid-node.mjs
src/: App.jsx  index.css
src/components/: CommandPalette.jsx  MagneticButton.jsx  (+1 more)
(+78 files in other folders)
